--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "beautiful": "lint-staged",
-    "prepare": "husky"
+    "prepare": "husky",
+    "server": "cd server && npm start",
+    "server:dev": "cd server && npm run dev",
+    "dev:all": "concurrently \"npm run server:dev\" \"npm run dev\""
   },
   "lint-staged": {
     "src/**/*.{js,json,scss,jsx,ts,tsx,css}": "prettier --single-quote --trailing-comma all --tab-width 4 --write"
@@ -42,7 +45,8 @@
     "tw-animate-css": "^1.3.8",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.6",
-    "prettier": "^3.6.2"
+    "prettier": "^3.6.2",
+    "concurrently": "^8.2.2"
   },
   "overrides": {
     "vite": "npm:rolldown-vite@7.1.14"
