update feature thống kê trong trang profile

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "lucide-react": "^0.543.0",
     "papaparse": "^5.5.3",
     "react": "^19.1.1",
+    "react-circular-progressbar": "^2.2.0",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.1",
     "react-toastify": "^11.0.5"
