--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-circular-progressbar": "^2.2.0",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.1",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
