--- a/package.json
+++ b/package.json
@@ -27,14 +27,18 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@tailwindcss/vite": "^4.1.13",
     "axios": "^1.9.0",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.23.16",
     "lucide-react": "^0.543.0",
     "papaparse": "^5.5.3",
     "react": "^19.1.1",
+    "react-big-calendar": "^1.19.4",
     "react-circular-progressbar": "^2.2.0",
+    "react-day-picker": "^9.13.0",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.9.1",
-    "react-toastify": "^11.0.5"
+    "react-router-dom": "^7.11.0",
+    "react-toastify": "^11.0.5",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
